# NovaChatServer

./: AuthHandlers_8h_source.html  CMakeLists.txt  ConfigManager_8h_source.html  DatabaseManager_8h_source.html  Doxyfile  IHandler_8h_source.html  IModel_8h_source.html  JWTManager_8h_source.html  Listener_8h_source.html  Logger_8h_source.html  MessageHandlers_8h_source.html  Message_8h_source.html  PasswordHasher_8h_source.html  README.md  Router_8h_source.html  SecurityUtils_8h_source.html  Server_8h_source.html  Session_8h_source.html  UUIDUtils_8h_source.html  UserHandlers_8h_source.html  User_8h_source.html  Validators_8h_source.html  _2github_2workspace_2src_2utils_2SecurityUtils_8h-example.html  annotated.html  classauth_1_1JWTManager-members.html  classauth_1_1JWTManager.html  classauth_1_1JWTManager__coll__graph.map  classauth_1_1JWTManager__coll__graph.md5  classconfig_1_1ConfigManager-members.html  classconfig_1_1ConfigManager.html  classconfig_1_1ConfigManager__coll__graph.map  classconfig_1_1ConfigManager__coll__graph.md5  classdatabase_1_1DatabaseManager-members.html  classdatabase_1_1DatabaseManager.html  classdatabase_1_1DatabaseManager__coll__graph.map  classdatabase_1_1DatabaseManager__coll__graph.md5  classes.html  classhandlers_1_1AuthHandlers-members.html  classhandlers_1_1AuthHandlers.html  classhandlers_1_1AuthHandlers__coll__graph.md5  (+166 more)
.github/workflows/: test.yml
docs/: API.md  Database schema.md  NovaChatServer.postman_collection.json  config.md  swagger.yaml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  (+20 more)
src/: config.json  main.cpp
src/auth/: JWTManager.cpp  JWTManager.h
src/config/: ConfigManager.cpp  ConfigManager.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/handlers/: AuthHandlers.cpp  AuthHandlers.h  IHandler.cpp  IHandler.h  MessageHandlers.cpp  MessageHandlers.h  UserHandlers.cpp  UserHandlers.h
src/models/: IModel.cpp  IModel.h  Message.cpp  Message.h  User.cpp  User.h
src/server/: Listener.cpp  Listener.h  Router.cpp  Router.h  Server.cpp  Server.h  Session.cpp  Session.h
src/sslCerts/: dhparams.pem  server.crt  server.key
src/utils/: Logger.cpp  Logger.h  PasswordHasher.cpp  PasswordHasher.h  SecurityUtils.cpp  SecurityUtils.h  UUIDUtils.cpp  UUIDUtils.h  Validators.cpp  Validators.h
test/: test.cpp
test/auth/: JWTManagerTest.h
test/config/: ConfigManagerTest.h
test/database/: DatabaseManagerTest.h
test/handlers/: AuthHandlersTest.h  MessageHandlersTest.h  UserHandlersTest.h
test/models/: MessageTest.h  UserTest.h
test/server/: RouterTest.h
test/utils/: LoggerTest.h  PasswordHasherTest.h  SecurityUtilsTest.h  UUIDUtilsTest.h  ValidatorsTest.h
